--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,9 @@
         <a href="/">Tech Blog</a>
       </h1>
        <nav>
-         {{#if loggedIn}}
+         <a href="/">Home</a>
          <a href="/dashboard">Dashboard</a>
+         {{#if loggedIn}}
          <button id="logout" class="btn-no-style">Logout</button>
          {{else}}
          <a href="/login">Login</a>
@@ -27,7 +28,7 @@
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting!
+      Thanks for Blogging!
     </footer>
   </div>
 
