--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,12 +1,12 @@
-<form class="signup-form">
+<form class="login-form">
   <div>
-    <label for="username-signup">Create a Username:</label>
-    <input type="text" id="username-signup" />
+    <label for="username-login">Create a Username:</label>
+    <input type="text" id="username-login" />
   </div>
 
   <div>
-    <label for="password-signup">Create a Password:</label>
-    <input type="password" id="password-signup" />
+    <label for="password-login">Create a Password:</label>
+    <input type="password" id="password-login" />
   </div>
   <div>
     <button type="submit">Signup!</button>
