--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
     <button type="submit">Login</button>
   </div>
 </form>
-
+<p>Sign up <a href="/signup">here</a> if you're not a member yet!</p>
 
 
 <script src="/javascript/login.js"></script>
