--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,12 @@
     margin: 0;
     font-family: sans-serif;
     color: #333;
+    line-height:1.5;
+    font-size: 20px;
+  }
+
+  .navbar {
+    
   }
   
   a {
