fixed posting issue & added content to show on home page

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,7 @@
 <article class="post">
   <div class="title">
     <h2>{{title}}</h2>
+    {{content}}
     <a href="/post{{id}}">
     </a>
   </div>
