--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -14,8 +14,14 @@
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
+
+    <div class="edit-button">
+
+    
     <button type="submit">Save Post</button>
-    <button type="button" class="delete-post-btn">Delete Post</button>
+    <button type="button" class="delete-btn">Delete Post</button>
+    </div>
+    
   </form>
 
   <form class="comment-form">
