--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,8 @@
     padding: 0;
     margin: 0;
     font-family: "Raleway",sans-serif;
-    color: #333;
+    color: #fff;
+    font-weight: bold;
     line-height:1.5;
     font-size: 25px;
   }
@@ -162,7 +163,7 @@
     width: 95%;
   }
   
-  .btn-no-style {
+  .btn-blank {
     background: none;
     border: none;
     cursor: pointer;
@@ -172,7 +173,7 @@
     transition: color .1s;
   } 
   
-  .btn-no-style:hover {
+  .btn-blank:hover {
     background: none;
     color: #8A84E2;
   }
@@ -201,7 +202,7 @@
     margin: -1.5% 0 2% 0;
   }
   
-  .comment-form {
+  .comment-area {
     margin-bottom: 5%;
   }
   
@@ -210,14 +211,9 @@
     margin-bottom: 1%;
   }
   
-  .comment:nth-child(odd) {
-    background-color: #fff5eb;
-  }
-  
   .comment .meta {
     font-size: 90%;
     margin-bottom: .5%;
-    opacity: .6;
   }
   
   .new-post-form input {
