--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -21,10 +21,10 @@
     <button type="submit">Save Post</button>
     <button type="button" class="delete-btn">Delete Post</button>
     </div>
-    
+
   </form>
 
-  <form class="comment-form">
+  <form class="comment-area">
     <div>
       <textarea name="comment-body"></textarea>
     </div>
