--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
+  <title>Talking Tech</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
          <a href="/">Home</a>
          <a href="/dashboard">Dashboard</a>
          {{#if loggedIn}}
-         <button id="logout" class="btn-no-style">Logout</button>
+         <button id="logout" class="btn-blank">Logout</button>
          {{else}}
          <a href="/login">Login</a>
          {{/if}}
