--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form class="login-form">
+<form class="form-login">
   <div>
     <label for="username-login">Username:</label>
     <input type="text" id="username-login" />
